--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     />
     <meta name="theme-color" content="#f38603" />
     <meta name="description" content="Plan your future with MyPath!" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
